<resources>
    <string name="app_name">Air + Sound Pollution</string>
    <string name="string_connect">Connect Device</string>
    <string name="string_disconnect">Disconnect Device</string>
    <string name="string_receive">Receive</string>
    <string name="string_view">View</string>
    <string name="string_upload">Upload</string>

    <string name="string_status">Status text here</string>
    <string name="status_received">Data received</string>
    <string name="status_bt_na">Bluetooth 4.0 not supported</string>
    <string name="status_ble_na">Bluetooth 4.0 not supported</string>
    <string name="title_scanner">BLE Device Scanner</string>


    <string name="status_connected">Connection thread: STARTED</string>
    <string name="status_failed">CONNECTION FAILED</string>
    <string name="status_file_not_exist">File not existed. Create one by retrieving data</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="search">Search</string>
    <string name="string_service">Start service</string>


</resources>
