<?xml version="1.0" encoding="utf-8"?>


<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.rmit.sepm.airsoundpollution.MainActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/button_connect"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="connect_bluetooth"
            android:text="@string/string_connect" />

        <Button
            android:id="@+id/button_receive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="receive_data"
            android:text="@string/string_receive" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="0dp">

        <Button
            android:id="@+id/button_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="view_data"
            android:text="@string/string_view" />

        <Button
            android:id="@+id/button_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="upload_data"
            android:text="@string/string_upload" />
    </TableRow>

    <TableRow>

        <TextView
            android:id="@+id/text_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_status" />
    </TableRow>

    <TableRow>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scrollbars="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/text_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Print data here" />
        </ScrollView>
    </TableRow>

</TableLayout>



